@@ -187,6 +187,12 @@
                             perm="755"
                             owner="root"
                             group="bin"/>
+          <packFileListElem type="File"
+                            to="${PACKAGE_TOP_DIR}bin/${OUTPUT_BASENAME}"
+                            from="${OUTPUT_PATH}"
+                            perm="755"
+                            owner="root"
+                            group="bin"/>
         </packFileList>
       </packaging>
       <item path="include/basic.hpp" ex="false" tool="3" flavor2="0">
@@ -713,9 +719,9 @@
             <pElem>src</pElem>
             <pElem>../include</pElem>
             <pElem>../../libarduinoext/include</pElem>
-            <pElem>../libarduinoemulator/include</pElem>
+            <pElem>../../libarduinoemulator/include</pElem>
             <pElem>include</pElem>
-            <pElem>/opt/arduino-1.6.12/hardware/arduino/avr/cores/arduino</pElem>
+            <pElem>${ARDUINO_PATH}/hardware/arduino/avr/cores/arduino</pElem>
           </incDir>
           <commandLine>-O3 -march=pentium3 -mfpmath=sse `pkg-config --cflags posixcpp`</commandLine>
           <warningLevel>2</warningLevel>
@@ -724,12 +730,12 @@
           <output>${CND_DISTDIR}/${CND_CONF}/terminal-basic</output>
           <linkerLibItems>
             <linkerLibProjectItem>
-              <makeArtifact PL="../libarduinoemulator"
+              <makeArtifact PL="../../libarduinoemulator"
                             CT="3"
                             CN="Release"
                             AC="false"
                             BL="true"
-                            WD="../libarduinoemulator"
+                            WD="../../libarduinoemulator"
                             BC="${MAKE}  -f Makefile CONF=Release"
                             CC="${MAKE}  -f Makefile CONF=Release clean"
                             OP="${CND_DISTDIR}/${CND_CONF}/${CND_PLATFORM}/liblibarduinoemulator.a">
